--- a/client/client_lobby.ui
+++ b/client/client_lobby.ui
@@ -132,6 +132,9 @@
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
+   <property name="rowCount">
+    <number>0</number>
+   </property>
    <property name="columnCount">
     <number>3</number>
    </property>
