--- a/client/client_connector.ui
+++ b/client/client_connector.ui
@@ -73,59 +73,30 @@
      <string>Exit</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="ipTextInput">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>130</y>
-      <width>161</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>localhost</string>
-    </property>
-    <property name="backgroundVisible">
-     <bool>false</bool>
-    </property>
-   </widget>
    <widget class="QLabel" name="ipLabel">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>130</y>
       <width>71</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#fce94f;&quot;&gt;Host / IP&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#000000;&quot;&gt;Host / IP&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="portLabel">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>190</y>
+      <x>30</x>
+      <y>186</y>
       <width>67</width>
-      <height>17</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#fce94f;&quot;&gt;Port&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="portTextInput">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>180</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>8080</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#000000;&quot;&gt;Port&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="logoWorms">
@@ -144,16 +115,16 @@
      <enum>Qt::RichText</enum>
     </property>
     <property name="pixmap">
-     <pixmap>../../resources/graphics/Logos/worms_logo.png</pixmap>
+     <pixmap resource="client_resources.qrc">:/images/worms_logo.png</pixmap>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="background">
     <property name="geometry">
      <rect>
       <x>-50</x>
       <y>-40</y>
       <width>411</width>
-      <height>301</height>
+      <height>311</height>
      </rect>
     </property>
     <property name="text">
@@ -163,68 +134,134 @@
      <enum>Qt::RichText</enum>
     </property>
     <property name="pixmap">
-     <pixmap>../../resources/graphics/Logos/client_connector_background.png</pixmap>
+     <pixmap resource="client_resources.qrc">:/images/connector_bg.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="portBoxLabel">
     <property name="geometry">
      <rect>
-      <x>-20</x>
-      <y>110</y>
-      <width>151</width>
-      <height>111</height>
+      <x>10</x>
+      <y>170</y>
+      <width>101</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../../resources/graphics/Logos/text_box.png</pixmap>
+     <pixmap resource="client_resources.qrc">:/images/text_box.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="playerNameInput">
+   <widget class="QLabel" name="playerNameLabel">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>80</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>pepe</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="ipLabel_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
+      <x>40</x>
       <y>80</y>
       <width>91</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600; color:#fce94f;&quot;&gt;Player Name&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#000000;&quot;&gt; Name&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <zorder>label</zorder>
-   <zorder>label_2</zorder>
+   <widget class="QLabel" name="ipBoxLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="client_resources.qrc">:/images/text_box.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="nameBoxLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="client_resources.qrc">:/images/text_box.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="playerNameInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>80</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>player</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="ipTextInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>130</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>localhost</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="portTextInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>180</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>8080</string>
+    </property>
+   </widget>
+   <zorder>background</zorder>
+   <zorder>portBoxLabel</zorder>
    <zorder>logoWorms</zorder>
    <zorder>connectButton</zorder>
    <zorder>exitButton</zorder>
-   <zorder>ipTextInput</zorder>
-   <zorder>ipLabel</zorder>
    <zorder>portLabel</zorder>
-   <zorder>portTextInput</zorder>
+   <zorder>ipBoxLabel</zorder>
+   <zorder>ipLabel</zorder>
+   <zorder>nameBoxLabel</zorder>
+   <zorder>playerNameLabel</zorder>
    <zorder>playerNameInput</zorder>
-   <zorder>ipLabel_2</zorder>
+   <zorder>ipTextInput</zorder>
+   <zorder>portTextInput</zorder>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -237,6 +274,8 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="client_resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
