--- a/client/new_lobby/qtdesigner/clientlobby.ui
+++ b/client/new_lobby/qtdesigner/clientlobby.ui
@@ -246,6 +246,21 @@
         <height>171</height>
        </rect>
       </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
       <column>
        <property name="text">
         <string>Partida</string>
