--- a/client/new_lobby/qtdesigner/clientlobby.ui
+++ b/client/new_lobby/qtdesigner/clientlobby.ui
@@ -514,6 +514,19 @@
         <string>Exit</string>
        </property>
       </widget>
+      <widget class="QLabel" name="text_waiting_match_notification">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>120</y>
+         <width>411</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
     </widget>
    </widget>
